--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "babel-core": "*",
     "babel-loader": "*",
     "babel-runtime": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
     "body-parser": "*",
     "es5-shim": "*",
     "imports-loader": "*",
     "loader-utils": "*",
     "lodash": "*",
     "react": "*",
+    "react-dom": "*",
     "flux": "*",
     "axios": "*",
     "express": "*",
