Stable basic refactor (moving from comments to items)

--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "flux": "*",
     "axios": "*",
     "express": "*",
-    "webpack": "*"
+    "webpack": "*",
+    "react-modal": "*"
   },
   "devDependencies": {
 
